--- a/src/css/stylus/icons.styl
+++ b/src/css/stylus/icons.styl
@@ -7,7 +7,7 @@ liekocites = "https://developer.donorsearch.org/design_elements/dropplets/liekoc
 in_review = "https://developer.donorsearch.org/design_elements/dropplets/in_review.svg"
 plazma = "https://developer.donorsearch.org/design_elements/dropplets/plazma.svg"
 trombocites = "https://developer.donorsearch.org/design_elements/dropplets/trombocites.svg"
-logo = "https://developer.donorsearch.org/design_elements/dropplets/dropplet.svg"
+logo = "https://developer.donorsearch.org/dropplet.svg"
 
 blood-icon(icon, w = 100, h = 0)
     width: unit(w, 'px')
