--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,7 +4,7 @@
   display: block;
   background-position: center center;
   background-size: auto auto;
-  background-image: url("https://developer.donorsearch.org/design_elements/dropplets/dropplet.svg");
+  background-image: url("https://developer.donorsearch.org/dropplet.svg");
   background-repeat: no-repeat;
 }
 #full-blood-icon {
