--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,6 +7,14 @@
   background-image: url("https://developer.donorsearch.org/dropplet.svg");
   background-repeat: no-repeat;
 }
+.logo-icon {
+  height: 120px;
+  display: block;
+  background-position: center center;
+  background-size: 75px auto;
+  background-image: url("https://developer.donorsearch.org/dropplet.svg");
+  background-repeat: no-repeat;
+}
 #full-blood-icon {
   width: 100px;
   height: 100px;
