--- a/src/css/stylus/main.styl
+++ b/src/css/stylus/main.styl
@@ -2,3 +2,20 @@
 
 @import "colors.styl"
 @import "icons.styl"
+
+html
+    height: 100%
+
+body
+    height: 100%
+    margin: 0px
+    padding: 0px
+
+.blood
+    display: inline-block
+    background-color: blue-color
+    padding: 5px 10px
+    color: white
+    border-radius: 5px
+    margin-left: 10px
+    font-size: 12px
