--- a/src/css/stylus/main.styl
+++ b/src/css/stylus/main.styl
@@ -42,5 +42,8 @@ body
 .TabbarItem--selected
     color: red-color !important
 
+.HeaderButton--android .Icon--24
+    padding: 0 !important
+
 .TabbarItem__label
     background: blue-color !important
