Это почти конец!

--- a/src/css/stylus/main.styl
+++ b/src/css/stylus/main.styl
@@ -7,6 +7,11 @@ icon = "https://developer.donorsearch.org/dropplet.svg"
 imdonor-img = "https://donorsearch.org/assets/index/want-to-2.341a4376-46eeadff198aa2076558355fb29cc069675e198f35ff8e205fd024e6f14a7b93.svg"
 iwdonor-img = "https://donorsearch.org/assets/index/want-to-1.6197ed02-e62ea6d9fd7e0c38d88f67b50002ada7404278c91371e2b3bcd15a2d58e133f7.svg"
 
+how1-img = "https://donorsearch.org/assets/index/1.a4f332fc-8816139c0de6627d5bde3cfeca88244468301018d07edb53db08f23d822055b2.svg"
+how2-img = "https://donorsearch.org/assets/index/2.772ed05d-944f2205a37bff8470df75f3687fdbfffa954ddaf2588c5c9608a86134cab645.svg"
+how3-img = "https://donorsearch.org/assets/index/3.4cce5783-dd7211a85c90332f64feb8f73f0f8feebf4cacef0326e97f4171e8afe8dba6e4.svg"
+how4-img = "https://donorsearch.org/assets/index/4.b696e2ee-8bad96a8e0696bcbbbd5e6ac6d0e5402fae130e45cf67e0f4459a7ae0a2daf83.svg"
+
 html
     height: 100%
 
@@ -63,3 +68,27 @@ body
     margin: 0 auto
     display: block
     background: url(iwdonor-img) no-repeat 50% / contain
+
+.how1-image, .how2-image, .how3-image, .how4-image
+    margin: 0 auto
+    display: block
+    width: auto
+    height: 140px
+    margin-top: 50px !important
+
+.how1-image
+    background: url(how1-img) no-repeat 50% / contain
+
+.how2-image
+    background: url(how2-img) no-repeat 50% / contain
+
+.how3-image
+    background: url(how3-img) no-repeat 50% / contain
+
+.how4-image
+    background: url(how4-img) no-repeat 50% / contain
+
+.how-text
+    color: gray-color
+    text-align: center
+    margin-top: 40px
