--- a/src/css/stylus/main.styl
+++ b/src/css/stylus/main.styl
@@ -22,7 +22,15 @@ body
 
 .header-logo
     display: inline-block
+    margin-left: 0
+    margin-top: 10px
+    margin-bottom: 10px
+    margin-right: 5px
     vertical-align: top
+    width: 1.5em
+    height: calc(100% - 20px)
+    background: url(icon) no-repeat 50% / contain
+    box-sizing: border-box;
 
 .bg-entrance
     height: 180px
